--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "pet-doctor",
-    "appid" : "",
+    "appid" : "__UNI__wx8701caef8fb86e01",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
