--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "pet-doctor",
-    "appid" : "__UNI__wx8701caef8fb86e01",
+    "appid" : "__UNI__AF708DF",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -50,7 +50,7 @@
     "quickapp" : {},
     /* 小程序特有相关 */
     "mp-weixin" : {
-        "appid" : "",
+        "appid" : "wx8701caef8fb86e01",
         "setting" : {
             "urlCheck" : false
         },
